added grunt-words-and-hyphens to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "grunt",
   "version": "0.1.1",
   "devDependencies": {
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "grunt-words-and-hyphens": "0.0.4"
   }
 }
